# unalome-guardian

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: build.yml
guardian_backend/: presidio_cli.py  presidio_service.py  requirements.txt
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: database.rs  lib.rs  main.rs  setup.rs
src/components/: GuardianHistory.tsx  GuardianInput.tsx  GuardianResults.tsx  PresidioSetup.tsx
src/components/ui/: progress.tsx  tabs.tsx
src/lib/: utils.ts
src/lib/guardian/: scanner.ts
src/types/: index.ts
